# Software-Development

 building_roads/: Cargo.toml  README.md
 building_roads/src/: lib.rs  main.rs
 building_roads/tests/: integration_tests.rs
another_game/: Cargo.toml  README-2.md
another_game/src/: lib.rs  main.rs
another_game/tests/: integration_tests.rs
concert_tickets/: Cargo.toml  README.md
concert_tickets/src/: lib.rs  main.rs
concert_tickets/tests/: integration_tests.rs
counting_rooms/: Cargo.toml  README.md
counting_rooms/src/: lib.rs  main.rs
counting_rooms/tests/: integration_test.rs
distinct_numbers/: Cargo.toml  README.md
distinct_numbers/src/: lib.rs  main.rs
distinct_numbers/tests/: integration_tests.rs
finding_borders/: Cargo.toml  README.md
finding_borders/src/: lib.rs  main.rs
finding_borders/tests/: integration_tests.rs
increasing_array/: Cargo.toml  README.md
increasing_array/src/: lib.rs  main-3.rs
increasing_array/tests/: integration_tests.rs
subordinates/: Cargo.toml  README.md
subordinates/src/: lib.rs  main.rs
subordinates/tests/: integration_tests.rs
tower_hanoi/: Cargo.toml  README.md
tower_hanoi/src/: lib.rs  main.rs
tower_hanoi/tests/: hanoi_tests.rs
two_set/: Cargo.toml  README.md
two_set/src/: lib.rs  main.rs
two_set/tests/: integration_test.rs
